objects/ssot__EmailEngagementScore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailClickLikelihood__c</fullName>
        <label>Email Click Likelihood</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailClickScoreNumber__c</fullName>
        <label>Email Click Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmailEngagementPersona__c</fullName>
        <label>Email Engagement Persona</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailOpenLikelihood__c</fullName>
        <label>Email Open Likelihood</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailOpenScoreNumber__c</fullName>
        <label>Email Open Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmailSubscribeLikelihood__c</fullName>
        <label>Email Subscribe Likelihood</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailSubscribeScoreNumber__c</fullName>
        <label>Email Subscribe Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Engagement Score Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549037216_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailEngagementScore_ContactPointEma_rel</label>
        <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
        <relationshipLabel>EmailEngagementScore_ContactPointEma_rel</relationshipLabel>
        <relationshipName>rel_1718549037216_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>